syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc Echo (EchoRequest) returns (EchoReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message EchoRequest {
  string message = 1;
}

message EchoReply {
  string message = 1;
}